      hardcoding of ext3 from elsewhere in partman, and make the default
      filesystem preseedable.
    - Check dmraid's exit code rather than parsing its output.
    - Don't display the Back button when asking for confirmation, since it's
      already a boolean "do you want to continue?" question and we ignore
      backup anyway (LP: #9244).
  * Run 'depmod -a' after loading extra partman components, since they might
    install further kernel modules as dependencies.

  [ Frans Pop ]
  * Remove myself as uploader.

 -- Colin Watson <cjwatson@debian.org>  Fri, 26 Dec 2008 14:11:37 +0000

partman-base (128) unstable; urgency=low

  * Record that CHANGE_FILE_SYSTEM changes the partition table (closes:
    #298042).

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 13 Oct 2008 19:24:45 +0100

partman-base (127) unstable; urgency=low

  * Add human readable descriptions for MMC/SD cards.

 -- Frans Pop <fjp@debian.org>  Mon, 29 Sep 2008 20:29:12 +0200

partman-base (126) unstable; urgency=low

  [ Frans Pop ]
  * base.sh: skip dividers in ask_user if they are the first option.
    Closes: #498845.
  * base.sh: also avoid consecutive dividers by skipping the second one.
  * base.sh: new function is_multipath_dev.
  * commit.sh: display correct dmraid partition info when confirming changes.

  [ Giuseppe Iuculano ]
  * init.d/parted: Set the sataraid flag for dmraid arrays.
    Patch based on work done by Luke Yelavich <themuso@ubuntu.com> in Ubuntu.
    The improved dmraid support requires parted (>= 1.8.8.git.2008.03.24-10).

  [ Updated translations ]
  * Bengali (bn.po) by Mahay Alam Khan (মাহে আলম খান)
  * Bosnian (bs.po) by Armin Besirovic
  * Catalan (ca.po) by Jordi Mallach
  * Danish (da.po)
  * Esperanto (eo.po) by Felipe Castro
  * Hebrew (he.po) by Lior Kaplan
  * Hindi (hi.po) by Kumar Appaiah
  * Croatian (hr.po) by Josip Rodin
  * Indonesian (id.po) by Arief S Fitrianto
  * Georgian (ka.po) by Aiet Kolkhi
  * Central Khmer (km.po) by KHOEM Sokhem