@@ -24,6 +24,8 @@ partman-base (129) UNRELEASED; urgency=low
     - Don't display the Back button when asking for confirmation, since it's
       already a boolean "do you want to continue?" question and we ignore
       backup anyway (LP: #9244).
+    - Cope with exception options, partition flags passed to SET_FLAGS, and
+      the partition name passed to SET_NAME being empty (closes: #268495).
   * Run 'depmod -a' after loading extra partman components, since they might
     install further kernel modules as dependencies.
 
